# UDAPose

./: .gitignore  README.md  engine.py  main.py  pyproject.toml  requirements.txt  test.sh  train.sh
LICENSES/: Apache-2.0.txt  LICENSE_StyleID.txt
config/: edpose.cfg.py
config/matcher/: HungarianMatcher.py
data-pipeline/: eval_vae.py  style_transfer.py  train_vae.py
data-pipeline/config/: style_mapping_list.json  style_transfer.yaml  train_vae.yaml  vae.json
data-pipeline/dataset/: ExLPoseDataset.py  TrainDataset.py  __init__.py
data-pipeline/model/vae/skip_v6/: Decoder.py  Encoder.py  Merge.py  SkipVAEv6.py
data-pipeline/styleid_module/: StyleTransferModule.py  util.py
data-pipeline/util/: count_param.py  fft.py  generate_style_mapping_list.py  get_model.py  get_optim.py  get_scheduler.py  io.py  loss_factory.py  rescale.py  suppress_stdout.py  torch_flags.py  window.py
datasets/: __init__.py  coco.py  coco_eval.py  crowdpose.py  crowdpose_eval.py  data_util.py  ehpt.py  ehpt_eval.py  ella_aug.py  exlpose.py  exlpose_eval.py  humanart.py  humanart_eval.py  transforms_coco.py  transforms_crowdpose.py  transforms_exlpose.py
models/: registry.py  utils.py
models/edpose/: criterion.py  edpose.py  matcher.py  position_encoding.py  postprocesses.py  transformer.py  transformer_deformable.py  utils.py
models/edpose/backbones/: backbone.py  swin_transformer.py
models/edpose/ops/: test.py
models/edpose/ops/functions/: ms_deform_attn_func.py
models/edpose/ops/modules/: ms_deform_attn.py  ms_deform_attn_key_aware.py
util/: box_loss.py  box_ops.py  config.py  crowdpose_concat_train_val.py  get_param_dicts.py  logger.py  misc.py  plot_utils.py  utils.py
