[project]
name = "UDAPose"
version = "1.0.0"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "addict~=2.4.0",
    "crowdposetools",
    "cython~=3.1.5",
    "einops~=0.8.1",
    "huggingface_hub",
    "matplotlib~=3.10.7",
    "numpy<2.3",
    "opencv-python~=4.11.0.86",
    "pycocotools~=2.0.10",
    "scipy~=1.16.2",
    "submitit~=1.5.3",
    "termcolor~=3.1.0",
    "timm~=1.0.20",
    "torch~=2.9.0",
    "torchvision~=0.24.0",
    "yapf<=0.40.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
crowdposetools = { git = "https://github.com/arsity/CrowdPose.git", subdirectory = "crowdpose-api/PythonAPI" }