[project]
name = "UDAPose"
version = "1.0.0"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "accelerate~=1.10.1",
    "addict~=2.4.0",
    "aim~=3.29.1",
    "albumentationsx~=2.0.10",
    "crowdposetools",
    "cython~=3.1.5",
    "diffusers~=0.35.1",
    "einops~=0.8.1",
    "huggingface_hub",
    "hydra-core~=1.3.2",
    "ipywidgets~=8.1.7",
    "matplotlib~=3.10.7",
    "notebook~=7.1.3",
    "numpy<2.3",
    "opencv-python~=4.11.0.86",
    "pycocotools~=2.0.10",
    "scikit-image~=0.25.2",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.2",
    "submitit~=1.5.3",
    "termcolor~=3.1.0",
    "timm~=1.0.20",
    "torch~=2.9.0",
    "torchvision~=0.24.0",
    "transformers~=4.56.1",
    "yapf<=0.40.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
crowdposetools = { git = "https://github.com/arsity/CrowdPose.git", subdirectory = "crowdpose-api/PythonAPI" }